Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -7,35 +7,9 @@
 <link rel="icon" type="image/png" href="favicon.png">
 
 <script>
-  // Dynamically load Pushpad.js and wait for it to initialize
-  (function () {
-    const script = document.createElement('script');
-    script.src = '/site/pushpad.js';
-    script.async = true;
-    script.onload = function () {
-      console.log('✅ Pushpad loaded');
+  (function(p,u,s,h,x){p.pushpad=p.pushpad||function(){(p.pushpad.q=p.pushpad.q||[]).push(arguments)};h=u.getElementsByTagName('head')[0];x=u.createElement('script');x.async=1;x.src=s;h.appendChild(x);})(window,document,'https://pushpad.xyz/pushpad.js');
 
-      // Now safely initialize
-      if (typeof pushpad !== 'undefined') {
-        pushpad('init', 9046);
-
-        // Add button after init
-        const btn = document.createElement('button');
-        btn.textContent = 'Enable Notifications';
-        btn.style.cssText = 'padding:10px 16px; background:#8fa2ff; color:#fff; border:none; border-radius:8px; cursor:pointer; display:block; margin:1rem auto;';
-        btn.onclick = function () {
-          pushpad('subscribe', function (isSubscribed) {
-            if (isSubscribed) alert('✅ Subscribed!');
-            else alert('❌ Permission denied or blocked.');
-          });
-        };
-        document.body.appendChild(btn);
-      } else {
-        console.error('❌ Pushpad failed to load.');
-      }
-    };
-    document.head.appendChild(script);
-  })();
+  pushpad('init', PROJECT_ID);
 </script>
   
 <script>
