Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -216,10 +216,14 @@ function setImage(imgEl,map,meta){
     tmp.onload = ()=>{ imgEl.src=url; imgEl.style.display='block'; imgEl.previousElementSibling.style.display='none'; };
 }
 
+  
+<script>
 /* --- PWA push setup --- */
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('/site/service-worker.js');
 }
+</script>
 
+  
 </body>
 </html>
