--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function(OneSignal) {
+    await OneSignal.init({
+      appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
+    });
+  });
+</script>
+
+  
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Best Fortnite Maps — Side Text</title>
