--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 
+
+<script src="/site/one.js"></script>
+  
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
