--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -1,123 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
-<script src="/site/one.js"></script>
-  
-<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-<script>
-  window.OneSignalDeferred = window.OneSignalDeferred || [];
-  OneSignalDeferred.push(async function(OneSignal) {
-    await OneSignal.init({
-      appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
-    });
-  });
-</script>
-
-  
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Best Fortnite Maps — Side Text</title>
 <link rel="icon" type="image/png" href="favicon.png">
 
+<!-- OneSignal SDK -->
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
+      serviceWorkerPath: '/OneSignalSDKWorker.js',
+      serviceWorkerUpdaterPath: '/OneSignalSDKUpdaterWorker.js'
+    });
+  });
+</script>
+
 <style>
 :root{
-  --bg:#050509;
-  --card-a:#13131f;
-  --card-b:#1a1a29;
-  --muted:#bcbce0;
-  --accent:#8fa2ff;
-  --radius:14px;
+  --bg:#050509; --card-a:#13131f; --card-b:#1a1a29; --muted:#bcbce0; --accent:#8fa2ff; --radius:14px;
 }
-
-body {
-  margin: 0;
-  padding: 2rem;
-  font-family: "Poppins", system-ui, sans-serif;
-  background: radial-gradient(circle at top left, #0a0a14 0%, var(--bg) 100%);
-  color: #e8e8f0;
-}
-
+body { margin:0; padding:2rem; font-family:"Poppins", system-ui, sans-serif; background: radial-gradient(circle at top left, #0a0a14 0%, var(--bg) 100%); color:#e8e8f0; }
 .wrap { max-width:1100px; margin:0 auto; }
-
-h1{
-  text-align:center;
-  margin:0 0 1.5rem;
-  color:#fff;
-  text-shadow:0 0 10px rgba(143,162,255,0.18);
-  font-size:2rem;
-}
-
-.layout {
-  display:grid;
-  grid-template-columns: 1fr 300px;
-  gap:2rem;
-}
-
+h1{ text-align:center; margin:0 0 1.5rem; color:#fff; text-shadow:0 0 10px rgba(143,162,255,0.18); font-size:2rem; }
+.layout { display:grid; grid-template-columns:1fr 300px; gap:2rem; }
 main { min-height:100vh; }
-
-aside {
-  background:linear-gradient(145deg,#181824,#10101a);
-  border-radius:var(--radius);
-  padding:1rem;
-  border:1px solid #2c2c44;
-  color:var(--muted);
-  box-shadow:0 10px 30px rgba(0,0,0,0.45);
-  font-size:0.95rem;
-}
-
-.preview {
-  display:grid;
-  grid-template-columns: 300px 1fr;
-  gap:1rem;
-  align-items:stretch;
-  background: linear-gradient(145deg, var(--card-a), var(--card-b));
-  border-radius: var(--radius);
-  overflow:hidden;
-  border:1px solid #292947;
-  box-shadow:0 6px 18px rgba(0,0,0,0.45);
-  margin-bottom:1.25rem;
-  min-height:150px;
-}
-
-.preview img {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-  background:linear-gradient(180deg,#0c0c14,#11111a);
-}
-
+aside { background:linear-gradient(145deg,#181824,#10101a); border-radius:var(--radius); padding:1rem; border:1px solid #2c2c44; color:var(--muted); box-shadow:0 10px 30px rgba(0,0,0,0.45); font-size:0.95rem; }
+.preview { display:grid; grid-template-columns:300px 1fr; gap:1rem; align-items:stretch; background: linear-gradient(145deg, var(--card-a), var(--card-b)); border-radius: var(--radius); overflow:hidden; border:1px solid #292947; box-shadow:0 6px 18px rgba(0,0,0,0.45); margin-bottom:1.25rem; min-height:150px; }
+.preview img { width:100%; height:100%; object-fit:cover; display:block; background:linear-gradient(180deg,#0c0c14,#11111a); }
 .info { padding:1rem 1.25rem; display:flex; flex-direction:column; justify-content:center; }
 .info h3 { margin:0 0 0.5rem 0; color:#fff; font-size:1.15rem; text-shadow:0 0 6px rgba(100,150,255,0.18); }
 .info p { margin:0; color:var(--muted); line-height:1.45; font-size:0.96rem; }
-
 .meta-row { margin-top:0.75rem; display:flex; gap:0.75rem; align-items:center; color:#9fb2ff; font-size:0.85rem; }
+a { text-decoration:none; color:inherit; }
+.no-image { display:flex; align-items:center; justify-content:center; color:var(--muted); font-weight:600; font-size:1rem; background:linear-gradient(180deg,#0c0c14,#0e0e18); }
 
-a { text-decoration: none; color: inherit; }
-
-.no-image {
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:var(--muted);
-  font-weight:600;
-  font-size:1rem;
-  background:linear-gradient(180deg,#0c0c14,#0e0e18);
-}
-
-/* --- Responsive --- */
 @media (max-width:980px){
-  .layout{ grid-template-columns: 1fr; }
-  .preview { grid-template-columns: 1fr; }
+  .layout{ grid-template-columns:1fr; }
+  .preview { grid-template-columns:1fr; }
   .preview img { height:220px; }
   aside { order:-1; }
 }
 
-/* --- Lightweight YouTube embed styles --- */
 .video { position: relative; width: 100%; max-width: 600px; margin-bottom:1.5rem; }
-.video__youtube { padding-bottom: 56.23%; width: 100%; height:0; overflow:hidden; position: relative; background-color:black; }
+.video__youtube { padding-bottom: 56.23%; width:100%; height:0; overflow:hidden; position:relative; background-color:black; }
 .video__placeholder { width:100%; position:absolute; top:0; left:0; height:100%; object-fit:cover; }
 .video__button { background:none; border:0; cursor:pointer; height:100%; left:0; position:absolute; text-indent:-9999px; top:0; width:100%; }
 .video__button:before { width:100%; height:100%; content:''; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); background:url(https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/yt/yt.avif) no-repeat center center; background-size:10%; }
@@ -130,111 +59,97 @@ a { text-decoration: none; color: inherit; }
 <h1>Best Fortnite Maps</h1>
 <div class="layout">
 <main>
-    <!-- Lightweight YouTube Embed -->
-    <div class="video">
-        <div class="video__youtube" data-youtube>
-            <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" class="video__placeholder" />
-            <button class="video__button" data-youtube-button="https://www.youtube.com/embed/Pr9LcxHFE_k">Play</button>
-        </div>
+  <div class="video">
+    <div class="video__youtube" data-youtube>
+      <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" class="video__placeholder" />
+      <button class="video__button" data-youtube-button="https://www.youtube.com/embed/Pr9LcxHFE_k">Play</button>
     </div>
-
-    <!-- container for cards -->
-    <div id="container"></div>
+  </div>
+  <div id="container"></div>
 </main>
 
 <aside>
 <h3 style="color:#9bb8ff; margin-top:0;">Featured Sections</h3>
 <ul style="padding-left:1rem; margin-top:0.5rem;">
-    <li>
-        <button 
-            onclick="window.open('https://www.fortnite.com/download?lang=en-US', '_blank')" 
-            style="padding: 0.5rem 1rem; background-color:#9bb8ff; color:white; border:none; border-radius:5px; cursor:pointer;">
-            Play Fortnite
-        </button>
-    </li>
+<li>
+<button onclick="window.open('https://www.fortnite.com/download?lang=en-US', '_blank')" style="padding:0.5rem 1rem; background-color:#9bb8ff; color:white; border:none; border-radius:5px; cursor:pointer;">Play Fortnite</button>
+</li>
 </ul>
 </aside>
 </div>
 </div>
 
-<!-- ✅ All JavaScript combined properly -->
 <script>
-/* --- Lightweight YouTube Player --- */
-(function (window) {
-    'use strict';
-    window.code = window.code || {};
-    window.code.lightweightYoutubePlayer = function() {
-        const videos = [...document.querySelectorAll('[data-youtube]')];
-        function init() { videos.forEach(bindEvent); }
-        function bindEvent(el) {
-            const btn = el.querySelector('[data-youtube-button]');
-            if(!btn) return;
-            btn.addEventListener('click', createIframe);
-        }
-        function createIframe(event) {
-            const url = event.target.dataset.youtubeButton;
-            const placeholder = event.target.parentNode;
-            const iframeHTML = `<div class="video__youtube"><iframe class="video__iframe" src="${url}?autoplay=1" frameborder="0" allowfullscreen></iframe></div>`;
-            placeholder.style.display = 'none';
-            placeholder.insertAdjacentHTML('beforebegin', iframeHTML);
-            placeholder.remove();
-        }
-        return { init };
-    };
+// --- Lightweight YouTube Player ---
+(function(window){
+  'use strict';
+  window.code = window.code || {};
+  window.code.lightweightYoutubePlayer = function(){
+    const videos=[...document.querySelectorAll('[data-youtube]')];
+    function init(){ videos.forEach(bindEvent); }
+    function bindEvent(el){
+      const btn=el.querySelector('[data-youtube-button]');
+      if(!btn) return;
+      btn.addEventListener('click', createIframe);
+    }
+    function createIframe(event){
+      const url=event.target.dataset.youtubeButton;
+      const placeholder=event.target.parentNode;
+      const iframeHTML=`<div class="video__youtube"><iframe class="video__iframe" src="${url}?autoplay=1" frameborder="0" allowfullscreen></iframe></div>`;
+      placeholder.style.display='none';
+      placeholder.insertAdjacentHTML('beforebegin', iframeHTML);
+      placeholder.remove();
+    }
+    return { init };
+  };
 })(window);
-document.addEventListener('DOMContentLoaded', () => {
-    window.code.lightweightYoutubePlayer().init();
-});
+document.addEventListener('DOMContentLoaded',()=>{ window.code.lightweightYoutubePlayer().init(); });
 
-/* --- Fortnite Maps Previews --- */
-const FALLBACK_SVG = 'data:image/svg+xml;utf8,' + encodeURIComponent(`<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="800"><defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#0c0c14"/><stop offset="1" stop-color="#11111a"/></linearGradient></defs><rect width="100%" height="100%" fill="url(#g)"/><g fill="#bdbde6" font-family="sans-serif" font-size="40" text-anchor="middle"><text x="50%" y="48%">No preview image</text><text x="50%" y="60%" font-size="24" opacity="0.85">Click the card to open the map</text></g></svg>`);
+// --- Fortnite Maps Previews ---
+const FALLBACK_SVG='data:image/svg+xml;utf8,'+encodeURIComponent(`<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="800"><defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#0c0c14"/><stop offset="1" stop-color="#11111a"/></linearGradient></defs><rect width="100%" height="100%" fill="url(#g)"/><g fill="#bdbde6" font-family="sans-serif" font-size="40" text-anchor="middle"><text x="50%" y="48%">No preview image</text><text x="50%" y="60%" font-size="24" opacity="0.85">Click the card to open the map</text></g></svg>`);
 
-const maps = [
-  { url:"https://www.fortnite.com/@jakus/3623-3871-1041?lang=en-US", title:"Battle Royale: HIGH TIDE | Snapshots", desc:"A full fan-made Battle Royale game mode. Sadly doesn't get a lot of players." },
-  { url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512?lang=en-US", title:"Chapter 3: Revibed", desc:"A solid recreation of Chapter 3 Vibin'." },
-  { url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277?lang=en-US", title:"Rewind Royale", desc:"A version of Chapter 1 Fortnite that is more accurate." },
-  { url:"https://www.fortnite.com/@epic/ranked-ballistic?lang=en-US", title:"Ranked Ballistic (By Epic Games)", desc:"A kinda fun Counter-Strike–like map by Epic Games." }
+const maps=[
+  {url:"https://www.fortnite.com/@jakus/3623-3871-1041?lang=en-US", title:"Battle Royale: HIGH TIDE | Snapshots", desc:"A full fan-made Battle Royale game mode. Sadly doesn't get a lot of players."},
+  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512?lang=en-US", title:"Chapter 3: Revibed", desc:"A solid recreation of Chapter 3 Vibin'."},
+  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277?lang=en-US", title:"Rewind Royale", desc:"A version of Chapter 1 Fortnite that is more accurate."},
+  {url:"https://www.fortnite.com/@epic/ranked-ballistic?lang=en-US", title:"Ranked Ballistic (By Epic Games)", desc:"A kinda fun Counter-Strike–like map by Epic Games."}
 ];
 
-const container = document.getElementById('container');
-maps.forEach(map => {
-    const card = document.createElement('article');
-    card.className = 'preview';
-    card.innerHTML = `<a href="${map.url}" target="_blank" rel="noopener noreferrer" style="display:block; color:inherit; text-decoration:none;">
-        <div class="thumb-wrap"><div class="no-image"></div><img class="real" style="display:none;" /></div>
-        <div class="info"><h3>${map.title}</h3><p>${map.desc}</p><div class="meta-row"><span>View on Fortnite</span></div></div>
-    </a>`;
-    container.appendChild(card);
+const container=document.getElementById('container');
+maps.forEach(map=>{
+  const card=document.createElement('article');
+  card.className='preview';
+  card.innerHTML=`<a href="${map.url}" target="_blank" rel="noopener noreferrer" style="display:block; color:inherit; text-decoration:none;"><div class="thumb-wrap"><div class="no-image"></div><img class="real" style="display:none;" /></div><div class="info"><h3>${map.title}</h3><p>${map.desc}</p><div class="meta-row"><span>View on Fortnite</span></div></div></a>`;
+  container.appendChild(card);
 });
 
-// Client-side preloading and replacement
 maps.forEach((map,i)=>{
-    const imgEl = container.querySelectorAll('.real')[i];
-    const cacheKey = 'preview_' + map.url;
-    let meta = null;
-    const cached = localStorage.getItem(cacheKey);
-    if(cached){ try{ meta=JSON.parse(cached); }catch(e){meta=null;} }
+  const imgEl=container.querySelectorAll('.real')[i];
+  const cacheKey='preview_'+map.url;
+  let meta=null;
+  const cached=localStorage.getItem(cacheKey);
+  if(cached){ try{ meta=JSON.parse(cached); }catch(e){ meta=null;} }
 
-    if(!meta){
-        fetch('https://api.microlink.io/?url='+encodeURIComponent(map.url))
-        .then(res=>res.json())
-        .then(json=>{ meta=json.data||null; if(meta)localStorage.setItem(cacheKey,JSON.stringify(meta)); })
-        .catch(err=>{ console.warn('preview fetch failed',map.url,err); meta=null; })
-        .finally(()=>{ setTimeout(()=>setImage(imgEl,map,meta),0); });
-    } else { setImage(imgEl,map,meta); }
+  if(!meta){
+    fetch('https://api.microlink.io/?url='+encodeURIComponent(map.url))
+      .then(res=>res.json())
+      .then(json=>{ meta=json.data||null; if(meta)localStorage.setItem(cacheKey,JSON.stringify(meta)); })
+      .catch(err=>{ console.warn('preview fetch failed',map.url,err); meta=null; })
+      .finally(()=>{ setTimeout(()=>setImage(imgEl,map,meta),0); });
+  } else { setImage(imgEl,map,meta); }
 });
 
 function setImage(imgEl,map,meta){
-    const url = (meta && meta.image && meta.image.url)?meta.image.url:FALLBACK_SVG;
-    const tmp = new Image();
-    tmp.src = url;
-    tmp.onload = ()=>{ imgEl.src=url; imgEl.style.display='block'; imgEl.previousElementSibling.style.display='none'; };
+  const url=(meta && meta.image && meta.image.url)?meta.image.url:FALLBACK_SVG;
+  const tmp=new Image();
+  tmp.src=url;
+  tmp.onload=()=>{ imgEl.src=url; imgEl.style.display='block'; imgEl.previousElementSibling.style.display='none'; };
 }
 
-/* --- PWA push setup --- */
-if ('serviceWorker' in navigator) {
+// --- PWA service worker setup ---
+if('serviceWorker' in navigator){
   navigator.serviceWorker.register('/site/service-worker.js');
 }
-</script>  
+</script>
 </body>
 </html>
