--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -9,14 +9,14 @@
 <!-- OneSignal SDK -->
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
 <script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
-      serviceWorkerPath: '/OneSignalSDKWorker.js',
-      serviceWorkerUpdaterPath: '/OneSignalSDKUpdaterWorker.js'
-    });
+window.OneSignal = window.OneSignal || [];
+OneSignal.push(function() {
+  OneSignal.init({
+    appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
+    serviceWorkerPath: '/OneSignalSDKWorker.js', // must be at repo root
+    autoRegister: true
   });
+});
 </script>
 
 <style>
