Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -13,7 +13,7 @@ window.OneSignal = window.OneSignal || [];
 OneSignal.push(function() {
   OneSignal.init({
     appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
-    serviceWorkerPath: '/OneSignalSDKWorker.js', // must be at repo root
+    serviceWorkerPath: '/site/OneSignalSDKWorker.js', // must be at repo root
     autoRegister: true
   });
 });
