Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -9,15 +9,19 @@
 <!-- OneSignal SDK -->
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
 <script>
-window.OneSignal = window.OneSignal || [];
-OneSignal.push(function() {
-  OneSignal.init({
-    appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
-    serviceWorkerPath: '/site/OneSignalSDKWorker.js', // must be at repo root
-    autoRegister: true
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "b7d38b21-0e06-4a5a-b2b9-b6864f2b9b44",
+      serviceWorkerPath: '/site/OneSignalSDKWorker.js', // correct path
+      autoRegister: true,
+      notifyButton: {
+        enable: true
+      }
+    });
   });
-});
 </script>
+
 
 <style>
 :root{
