--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <meta name="description" content="A group of websites">
 <title>Internetperson-dev Useful links</title>
 <link rel="icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" href="liquidglassbutton.css"> 
+
+
 <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> Ladybird fallback-->
 <style>
 body {
