--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ h1 {
 function createLadybird(){const e=document.createElement("div");e.classList.add("ladybird"),e.innerText="🐞",e.style.left=Math.random()*window.innerWidth+"px",document.body.appendChild(e),setTimeout((()=>{e.remove()}),1e3)}document.addEventListener("DOMContentLoaded",(function(){if("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0"===navigator.userAgent)for(let e=0;e<10;e++)setTimeout(createLadybird,500*Math.random())}));
     </script>
 <div class="links">
+  <button>
   <button class="collapsible">/etc</button>
 <div class="content">
   <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
