--- a/index.html
+++ b/index.html
@@ -6,86 +6,140 @@
 <meta name="description" content="A group of websites">
 <title>Internetperson-dev Useful links</title>
 <link rel="icon" type="image/png" href="favicon.png">
-<link rel="stylesheet" href="liquidglassbutton.css"> 
 
-
-<!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> Ladybird fallback-->
 <style>
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  background: #1e1e1e;
+  background: radial-gradient(circle at top left, #1f1f1f, #121212);
   color: #fff;
-  overflow-x: hidden; /* Allow vertical scrolling */
+  overflow-x: hidden;
 }
+
+/* LIQUID GLASS EFFECT */
+.glass {
+  background: rgba(255, 255, 255, 0.12);
+  border-radius: 20px;
+  backdrop-filter: blur(20px) saturate(180%);
+  -webkit-backdrop-filter: blur(20px) saturate(180%);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3), inset 0 0 40px rgba(255,255,255,0.08);
+  border: 1px solid rgba(255,255,255,0.25);
+}
+
 .links {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  padding: 20px;
+  padding: 40px;
+  gap: 15px;
 }
+
 h1 {
   font-size: 2rem;
   margin-bottom: 20px;
+  text-shadow: 0 4px 15px rgba(255,255,255,0.2);
 }
-  .collapsible {
-    background: rgba(255, 255, 255, 0.1);
-    color: #fff;
-    cursor: pointer;
-    padding: 12px;
-    width: 300px;
-    border: none;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 1rem;
-    margin: 8px 0;
-    transition: background 0.2s;
-    backdrop-filter: blur(10px);
-  }
-  .collapsible:hover {
-    background: rgba(255, 255, 255, 0.2);
-  }
-  .content {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-  }
-  .content button {
-    width: 280px; /* slightly smaller so it looks nested */
-    background: rgba(255, 255, 255, 0.05);
-  }
-.ladybird{position:absolute;font-size:2rem;top:0;opacity:1;pointer-events:none;animation:fall 3s linear forwards}@keyframes fall{from{transform:translateY(-50px);opacity:1}to{transform:translateY(100vh);opacity:0}}
+
+.collapsible {
+  cursor: pointer;
+  padding: 14px;
+  width: 320px;
+  border: none;
+  border-radius: 18px;
+  text-align: center;
+  font-size: 1rem;
+  margin: 8px 0;
+  transition: 0.25s ease;
+}
+
+.collapsible:hover {
+  background: rgba(255, 255, 255, 0.2);
+  transform: translateY(-2px);
+}
+
+.content {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  gap: 10px;
+}
+
+.content button {
+  width: 300px;
+  padding: 12px;
+  border-radius: 16px;
+  border: none;
+  font-size: 0.95rem;
+  cursor: pointer;
+  transition: 0.25s ease;
+}
+
+.content button:hover {
+  background: rgba(255,255,255,0.15);
+  transform: translateY(-2px);
+}
+
+/* LADYBIRD ANIMATION */
+.ladybird {
+  position: absolute;
+  font-size: 2rem;
+  top: 0;
+  opacity: 1;
+  pointer-events: none;
+  animation: fall 3s linear forwards;
+}
+
+@keyframes fall {
+  from { transform: translateY(-50px); opacity: 1; }
+  to { transform: translateY(100vh); opacity: 0; }
+}
 </style>
 </head>
 <body>
-    <script>
-function createLadybird(){const e=document.createElement("div");e.classList.add("ladybird"),e.innerText="🐞",e.style.left=Math.random()*window.innerWidth+"px",document.body.appendChild(e),setTimeout((()=>{e.remove()}),1e3)}document.addEventListener("DOMContentLoaded",(function(){if("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0"===navigator.userAgent)for(let e=0;e<10;e++)setTimeout(createLadybird,500*Math.random())}));
-    </script>
+<script>
+function createLadybird(){
+  const e=document.createElement("div");
+  e.classList.add("ladybird");
+  e.innerText="🐞";
+  e.style.left=Math.random()*window.innerWidth+"px";
+  document.body.appendChild(e);
+  setTimeout(()=>{e.remove()},1000)
+}
+
+document.addEventListener("DOMContentLoaded",function(){
+  if(navigator.userAgent.includes("Ladybird")){
+    for(let e=0;e<10;e++) setTimeout(createLadybird,500*Math.random());
+  }
+});
+</script>
+
 <div class="links">
-  <button>
-  <button class="collapsible">/etc</button>
-<div class="content">
-  <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
-  <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
-  <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
-  <button onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
-  <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
-  <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
-  <button onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
-  <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
-  <button onclick="location.href='https://calculator.apps.chrome/'">Google Calculator PWA</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
-  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
+  <button class="collapsible glass">/etc</button>
+
+  <div class="content">
+    <button class="glass" onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
+    <button class="glass" onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
+    <button class="glass" onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
+    <button class="glass" onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
+    <button class="glass" onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
+    <button class="glass" onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
+    <button class="glass" onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
+    <button class="glass" onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
+    <button class="glass" onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
+    <button class="glass" onclick="location.href='https://calculator.apps.chrome/'">Google Calculator PWA</button>
+    <button class="glass" onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
+    <button class="glass" onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
+  </div>
+
 </div>
 
 <script>
-  document.querySelector(".collapsible").addEventListener("click", function() {
-    const content = this.nextElementSibling;
-    content.style.display = content.style.display === "flex" ? "none" : "flex";
-  });
+document.querySelector(".collapsible").addEventListener("click", function() {
+  const content = this.nextElementSibling;
+  content.style.display = content.style.display === "flex" ? "none" : "flex";
+});
 </script>
-</div>
+
 </body>
 </html>
