--- a/index.html
+++ b/index.html
@@ -8,21 +8,44 @@
 <link rel="icon" type="image/png" href="favicon.png">
 
 <style>
+
+  
+html,body{height:100%;min-height:500vh;margin:0;font-family:system-ui,sans-serif;overflow-x:hidden}
+.bg{position:absolute;inset:0;z-index:-1}
+.bg img{width:100%;display:block}
+
+.glass{
+  position:fixed;inset:50% auto auto 50%;transform:translate(-50%,-50%);
+  width:20rem;height:20rem;border-radius:50%;
+  background:rgba(255,255,255,.08);border:2px solid transparent;
+  box-shadow:0 0 0 2px rgba(255,255,255,.6),0 16px 32px rgba(0,0,0,.12);
+  backdrop-filter:url(#frosted);-webkit-backdrop-filter:url(#frosted);
+  display:grid;place-items:center;cursor:pointer;outline:0;
+}
+
+.glass::before,
+.glass::after{
+  content:"";position:absolute;width:40%;height:10px;background:#fff;border-radius:10px;
+}
+.glass::after{transform:rotate(90deg)}
+
+  body {
+    cursor: none;
+  }
+
+
+
+
+
+
+
+
+  
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   background: radial-gradient(circle at top left, #1f1f1f, #121212);
   color: #fff;
   overflow-x: hidden;
-}
-
-/* LIQUID GLASS EFFECT */
-.glass {
-  background: rgba(255, 255, 255, 0.12);
-  border-radius: 20px;
-  backdrop-filter: blur(20px) saturate(180%);
-  -webkit-backdrop-filter: blur(20px) saturate(180%);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.3), inset 0 0 40px rgba(255,255,255,0.08);
-  border: 1px solid rgba(255,255,255,0.25);
 }
 
 .links {
