--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 5rem;
-  height: 5rem;
+  width: 2rem; /* Cursor size*/
+  height: 2rem;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
