--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ html, body {
 
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .glass-cursor::after {
