--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <style>
 
+
+* {
+   cursor: none
+}
+
 /* =========================
    SYSTEM / GLOBAL
    ========================= */
@@ -122,6 +127,7 @@ button {
    user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  outline: none;
 }
 
 /* =========================
