--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 
 <style>
 
-
-* {
-   cursor: none
-}
-
 /* =========================
    SYSTEM / GLOBAL
    ========================= */
@@ -36,7 +31,7 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 2rem; /* Cursor size*/
+  width: 2rem;
   height: 2rem;
   border-radius: 50%;
   transform: translate(-50%, -50%);
@@ -51,11 +46,6 @@ html, body {
 
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-
-}
-
-.glass-cursor::after {
-  transform: rotate(90deg);
 }
 
 /* =========================
@@ -84,13 +74,16 @@ h1 {
   border-radius: 18px;
   font-size: 1rem;
   text-align: center;
-  cursor: pointer;
   transition: 0.25s ease;
 
   background: rgba(255, 255, 255, 0.12);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   color: #fff;
+  cursor: none; /* force hide cursor */
+  user-select: none;
+  -webkit-user-select: none;
+  outline: none;
 }
 
 .glass:hover {
@@ -113,21 +106,16 @@ h1 {
   border-radius: 16px;
   border: none;
   font-size: 0.95rem;
-  cursor: pointer;
   transition: 0.25s ease;
+  cursor: none; /* force hide cursor */
+  user-select: none;
+  -webkit-user-select: none;
+  outline: none;
 }
 
 .content button:hover {
   background: rgba(255,255,255,0.15);
   transform: translateY(-2px);
-}
-
-
-button { 
-   user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  outline: none;
 }
 
 /* =========================
@@ -179,7 +167,6 @@ button {
 <script>
 /* cursor follow */
 const cursor = document.querySelector('.glass-cursor');
-
 document.addEventListener('mousemove', e => {
   cursor.style.left = e.clientX + 'px';
   cursor.style.top  = e.clientY + 'px';
