Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -165,11 +165,11 @@ document.addEventListener('DOMContentLoaded', () => {
 
 // --- Map Data & Logic ---
 const maps = [
-  {url:"https://www.fortnite.com/@jakus/3623-3871-1041", title:"High Tide | Snapshots", desc:"An ambitious fan-made Battle Royale experience featuring custom mechanics and a unique tropical setting."},
-  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512", title:"Chapter 3: Revibed", desc:"Relive the vibes of the Seven vs. The Imagined Order in this high-fidelity Chapter 3 recreation."},
-  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277", title:"Rewind Royale", desc:"The ultimate nostalgia trip. A meticulously crafted version of the OG Chapter 1 map."},
-  {url:"https://www.fortnite.com/@epic/ranked-ballistic", title:"Ranked Ballistic", desc:"Tactical 5v5 combat. Precise gunplay and objective-based rounds designed by Epic Games."},
-  {url:"https://www.fortnite.com/@playkigai/4817-2697-1013", title:"Arena Wars", desc:"Fast-paced, twitch-reflex gameplay inspired by the golden era of Unreal Tournament."}
+  {url:"https://www.fortnite.com/@jakus/3623-3871-1041", title:"High Tide | Snapshots", desc:"An ambitious fan-made Battle Royale with consistant updates."},
+  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512", title:"Chapter 3: Revibed", desc:"Revibed almost perfectly recreated."},
+  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277", title:"Rewind Royale", desc:"Fortnite OG, but better."},
+  {url:"https://www.fortnite.com/@epic/ranked-ballistic", title:"Ranked Ballistic", desc:"If Epic Games made a 5v5 FPS game."},
+  {url:"https://www.fortnite.com/@playkigai/4817-2697-1013", title:"Arena Wars", desc:"Fast-paced, twitch-reflex combat arena game inspired by Unreal Tournament."}
 ];
 
 const container = document.getElementById('container');
