Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -146,7 +146,7 @@ aside {
 
     <aside>
       <h3 style="margin-top:0">Featured</h3>
-      <p style="font-size: 0.9rem; color: var(--text-muted)">New maps are added weekly. Don't forget to enable notifications.</p>
+      <p style="font-size: 0.9rem; color: var(--text-muted)">New maps are added regularly Don't forget to enable notifications.</p>
       <button class="btn-primary" onclick="window.open('https://www.fortnite.com/download', '_blank')">Launch Fortnite</button>
     </aside>
   </div>
