Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -3,212 +3,245 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Best Fortnite Maps — Discovery</title>
+<title>Fortnite Maps — Libadwaita Style</title>
 <link rel="icon" type="image/png" href="favicon.png">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<!-- Inter is the closest web font to Cantarell/GNOME's default -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root {
-  --bg: #0b0b14;
-  --card-bg: rgba(25, 25, 45, 0.6);
-  --card-border: rgba(255, 255, 255, 0.1);
-  --accent: #7c83ff;
-  --accent-glow: rgba(124, 131, 255, 0.4);
-  --text-main: #e2e2f0;
-  --text-muted: #9494b8;
-  --radius: 20px;
+  /* GNOME/Libadwaita Dark Palette adapted to your colors */
+  --bg-color: #050509;
+  --window-bg: #10101a;
+  --card-bg: #1a1a29;
+  --card-hover: #242438;
+  --header-bg: #141421;
+  --accent: #8fa2ff;
+  --accent-text: #ffffff;
+  --text-main: #ffffff;
+  --text-muted: #bcbce0;
+  --border: rgba(255, 255, 255, 0.08);
+  --radius: 12px;
 }
 
-body { 
-  margin: 0; 
-  padding: 0; 
-  font-family: 'Inter', system-ui, sans-serif; 
-  background: var(--bg);
-  background-image: 
-    radial-gradient(circle at 10% 20%, rgba(124, 131, 255, 0.05) 0%, transparent 40%),
-    radial-gradient(circle at 90% 80%, rgba(124, 131, 255, 0.05) 0%, transparent 40%);
-  color: var(--text-main);
-  line-height: 1.6;
-}
-
-.wrap { max-width: 1200px; margin: 0 auto; padding: 3rem 1.5rem; }
-
-header { text-align: center; margin-bottom: 4rem; }
-h1 { 
-  font-size: 3.5rem; 
-  font-weight: 800; 
-  letter-spacing: -0.02em;
+body {
   margin: 0;
-  background: linear-gradient(to bottom, #fff 30%, var(--text-muted));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  padding: 0;
+  font-family: "Inter", system-ui, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-main);
+  -webkit-font-smoothing: antialiased;
 }
 
-.layout { display: grid; grid-template-columns: 1fr 320px; gap: 3rem; }
-
-/* Video Styling */
-.video { 
-  border-radius: var(--radius); 
-  overflow: hidden; 
-  box-shadow: 0 20px 50px rgba(0,0,0,0.5); 
-  border: 1px solid var(--card-border);
-  margin-bottom: 3rem;
+/* Libadwaita HeaderBar */
+.header-bar {
+  height: 56px;
+  background: var(--header-bg);
+  border-bottom: 1px solid var(--border);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
-.video__youtube { position: relative; padding-bottom: 56.25%; background: #000; }
-.video__placeholder { width: 100%; height: 100%; position: absolute; object-fit: cover; filter: brightness(0.7); }
-.video__button { 
-  position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-  width: 80px; height: 80px; background: var(--accent); border: none; border-radius: 50%;
-  cursor: pointer; z-index: 2; transition: all 0.3s ease;
-  box-shadow: 0 0 30px var(--accent-glow);
-  color: white; font-weight: bold;
-}
-.video__button:hover { transform: translate(-50%, -50%) scale(1.1); background: #fff; color: var(--accent); }
 
-/* Card Styling */
-.preview-link { text-decoration: none; color: inherit; display: block; margin-bottom: 1.5rem; }
-.preview { 
-  display: grid; 
-  grid-template-columns: 280px 1fr; 
-  background: var(--card-bg);
-  backdrop-filter: blur(10px);
+.header-bar h1 {
+  font-size: 15px;
+  font-weight: 700;
+  margin: 0;
+  color: var(--text-main);
+}
+
+/* The "Clamp" - GNOME layouts usually have a max-width centered container */
+.clamp {
+  max-width: 860px;
+  margin: 0 auto;
+  padding: 32px 16px;
+}
+
+/* Adwaita Video Player Look */
+.video-container {
+  background: #000;
   border-radius: var(--radius);
-  border: 1px solid var(--card-border);
   overflow: hidden;
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-.preview:hover {
-  transform: translateY(-5px) scale(1.01);
-  border-color: var(--accent);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+  border: 1px solid var(--border);
+  margin-bottom: 32px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
 
-.thumb-wrap { position: relative; height: 100%; min-height: 180px; background: #161625; }
-.preview img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s ease; }
-.info { padding: 1.5rem 2rem; display: flex; flex-direction: column; justify-content: center; }
-.info h3 { margin: 0 0 0.5rem; font-size: 1.4rem; color: #fff; }
-.info p { margin: 0; color: var(--text-muted); font-size: 0.95rem; }
-
-.meta-row { 
-  margin-top: 1rem; 
-  font-size: 0.8rem; 
-  text-transform: uppercase; 
-  letter-spacing: 0.1em; 
-  color: var(--accent); 
-  font-weight: 700; 
-}
-
-/* Sidebar */
-aside { 
-  position: sticky; top: 2rem; 
-  height: fit-content;
-  background: rgba(255,255,255,0.03); 
-  padding: 2rem; 
+/* Adwaita Boxed List Pattern */
+.boxed-list {
+  background: var(--window-bg);
   border-radius: var(--radius);
-  border: 1px solid var(--card-border);
+  border: 1px solid var(--border);
+  overflow: hidden;
+  margin-bottom: 24px;
 }
-.btn-primary {
-  display: block; width: 100%; padding: 1rem;
-  background: var(--accent); color: white;
-  border: none; border-radius: 12px;
-  font-weight: 700; cursor: pointer;
-  transition: 0.3s; margin-top: 1rem;
-}
-.btn-primary:hover { background: #fff; color: var(--accent); box-shadow: 0 0 20px var(--accent-glow); }
 
-@media (max-width: 980px) {
-  .layout { grid-template-columns: 1fr; }
-  .preview { grid-template-columns: 1fr; }
-  h1 { font-size: 2.5rem; }
-  aside { order: -1; position: relative; top: 0; margin-bottom: 2rem; }
+.list-row {
+  display: grid;
+  grid-template-columns: 140px 1fr;
+  text-decoration: none;
+  color: inherit;
+  border-bottom: 1px solid var(--border);
+  transition: background 0.2s;
+}
+
+.list-row:last-child { border-bottom: none; }
+.list-row:hover { background: var(--card-hover); }
+
+.row-image {
+  width: 140px;
+  height: 100px;
+  object-fit: cover;
+  background: var(--card-bg);
+}
+
+.row-content {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.row-title {
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+
+.row-desc {
+  font-size: 14px;
+  color: var(--text-muted);
+  line-height: 1.4;
+}
+
+/* Libadwaita Buttons */
+.adw-button {
+  background: var(--card-bg);
+  border: 1px solid var(--border);
+  color: var(--text-main);
+  padding: 8px 16px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.2s;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.adw-button:hover { background: var(--card-hover); }
+.adw-button.suggested-action {
+  background: var(--accent);
+  color: #000;
+  border: none;
+}
+
+.adw-button.suggested-action:hover {
+  filter: brightness(1.1);
+}
+
+/* Utility classes */
+.section-title {
+  font-size: 13px;
+  font-weight: 700;
+  color: var(--text-muted);
+  text-transform: uppercase;
+  margin: 0 0 8px 12px;
+  letter-spacing: 0.5px;
+}
+
+@media (max-width: 600px) {
+  .list-row { grid-template-columns: 1fr; }
+  .row-image { width: 100%; height: 180px; }
 }
 </style>
 </head>
 <body>
 
-<div class="wrap">
-  <header>
-    <h1>Fortnite Discovery</h1>
-    <p style="color: var(--text-muted)">The most unique UEFN experiences, handpicked.</p>
-  </header>
+<header class="header-bar">
+  <h1>Best Fortnite Maps</h1>
+</header>
 
-  <div class="layout">
-    <main>
-      <div class="video">
-        <div class="video__youtube" data-youtube>
-          <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" class="video__placeholder" />
-          <button class="video__button" data-youtube-button="https://www.youtube.com/embed/Pr9LcxHFE_k">▶</button>
-        </div>
-      </div>
-      
-      <div id="container"></div>
-    </main>
-
-    <aside>
-      <h3 style="margin-top:0">Featured</h3>
-      <p style="font-size: 0.9rem; color: var(--text-muted)">New maps are added regularly Don't forget to enable notifications.</p>
-      <button class="btn-primary" onclick="window.open('https://www.fortnite.com/download', '_blank')">Launch Fortnite</button>
-    </aside>
+<div class="clamp">
+  
+  <div class="video-container" id="video-root">
+    <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden;">
+        <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" 
+             style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; opacity:0.6;">
+        <button onclick="playVideo()" class="adw-button suggested-action" 
+                style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); padding: 15px 30px; border-radius: 50px;">
+          Play Preview
+        </button>
+    </div>
   </div>
+
+  <div class="section-title">Discovery</div>
+  <div class="boxed-list" id="map-list">
+    <!-- Items injected here -->
+  </div>
+
+  <div class="section-title">Resources</div>
+  <div class="boxed-list" style="padding: 12px;">
+    <button class="adw-button suggested-action" style="width:100%" onclick="window.open('https://www.fortnite.com/download')">
+        Download Fortnite
+    </button>
+  </div>
+
 </div>
 
 <script>
-// --- Video Logic ---
-document.addEventListener('DOMContentLoaded', () => {
-  const btn = document.querySelector('[data-youtube-button]');
-  btn.addEventListener('click', (e) => {
-    const url = e.target.dataset.youtubeButton;
-    const parent = e.target.closest('.video__youtube');
-    parent.innerHTML = `<iframe class="video__iframe" style="position:absolute;top:0;left:0;width:100%;height:100%;" src="${url}?autoplay=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>`;
-  });
-});
-
-// --- Map Data & Logic ---
 const maps = [
-  {url:"https://www.fortnite.com/@jakus/3623-3871-1041", title:"High Tide | Snapshots", desc:"An ambitious fan-made Battle Royale with consistant updates."},
-  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512", title:"Chapter 3: Revibed", desc:"Revibed almost perfectly recreated."},
-  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277", title:"Rewind Royale", desc:"Fortnite OG, but better."},
-  {url:"https://www.fortnite.com/@epic/ranked-ballistic", title:"Ranked Ballistic", desc:"If Epic Games made a 5v5 FPS game."},
-  {url:"https://www.fortnite.com/@playkigai/4817-2697-1013", title:"Arena Wars", desc:"Fast-paced, twitch-reflex combat arena game inspired by Unreal Tournament."}
+  {url:"https://www.fortnite.com/@jakus/3623-3871-1041", title:"High Tide | Snapshots", desc:"A full fan-made Battle Royale game mode with custom mechanics."},
+  {url:"https://www.fortnite.com/@teamrevibed/9997-0482-5512", title:"Chapter 3: Revibed", desc:"A solid recreation of Chapter 3 Vibin' assets."},
+  {url:"https://www.fortnite.com/@pandvilspam/2229-0002-0277", title:"Rewind Royale", desc:"A version of Chapter 1 Fortnite that is more accurate."},
+  {url:"https://www.fortnite.com/@epic/ranked-ballistic", title:"Ranked Ballistic", desc:"A tactical Counter-Strike–like map created by Epic Games."},
+  {url:"https://www.fortnite.com/@playkigai/4817-2697-1013", title:"ARENA WARS", desc:"Fast-paced recreation of Unreal Tournament in Fortnite."}
 ];
 
-const container = document.getElementById('container');
-const FALLBACK_SVG = `data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect width='100' height='100' fill='%231a1a2e'/%3E%3C/svg%3E`;
+function playVideo() {
+    const root = document.getElementById('video-root');
+    root.innerHTML = `<div style="position:relative; padding-bottom:56.25%; height:0;">
+        <iframe src="https://www.youtube.com/embed/Pr9LcxHFE_k?autoplay=1" 
+                style="position:absolute; top:0; left:0; width:100%; height:100%;" 
+                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>`;
+}
+
+const container = document.getElementById('map-list');
 
 maps.forEach(map => {
-  const card = document.createElement('a');
-  card.className = 'preview-link';
-  card.href = map.url;
-  card.target = "_blank";
-  card.innerHTML = `
-    <article class="preview">
-      <div class="thumb-wrap">
-        <img src="${FALLBACK_SVG}" class="map-img" alt="${map.title}">
-      </div>
-      <div class="info">
-        <h3>${map.title}</h3>
-        <p>${map.desc}</p>
-        <div class="meta-row">Explore Map →</div>
-      </div>
-    </article>
-  `;
-  container.appendChild(card);
+  const row = document.createElement('a');
+  row.className = 'list-row';
+  row.href = map.url;
+  row.target = '_blank';
   
-  // Dynamic Image Fetching
-  const imgEl = card.querySelector('.map-img');
-  const cacheKey = 'v2_preview_' + map.url;
+  row.innerHTML = `
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" class="row-image" data-url="${map.url}">
+    <div class="row-content">
+      <div class="row-title">${map.title}</div>
+      <div class="row-desc">${map.desc}</div>
+    </div>
+  `;
+  container.appendChild(row);
+
+  // Simple preview loader
+  const imgEl = row.querySelector('.row-image');
+  const cacheKey = 'lib_prev_' + map.url;
   const cached = localStorage.getItem(cacheKey);
 
   if(cached) {
-    imgEl.src = JSON.parse(cached);
+    imgEl.src = cached;
   } else {
     fetch(`https://api.microlink.io/?url=${encodeURIComponent(map.url)}`)
       .then(res => res.json())
       .then(json => {
-        const imgUrl = json.data?.image?.url;
-        if(imgUrl) {
-          imgEl.src = imgUrl;
-          localStorage.setItem(cacheKey, JSON.stringify(imgUrl));
+        if(json.data && json.data.image) {
+          imgEl.src = json.data.image.url;
+          localStorage.setItem(cacheKey, json.data.image.url);
         }
       });
   }
